# simdsearch

./: README.md
benchmark/: CMakeLists.txt  README.md
benchmark/benchmarks/: benchmark.cpp  glob_benchmark.cpp
benchmark/data/: 43-0.txt
benchmark/include/: avx512search.h  globmatch.h  kmp_twoway.h  neonsearch.h  sz_needle_anomalies.h
benchmark/tests/: test_glob.cpp  test_search.cpp
